Add signing support
